added more detail code block descriptions

--- a/compare.ipynb
+++ b/compare.ipynb
@@ -9,11 +9,7 @@
     "## Introduction\n",
     "In this lesson, you’ll learn how to compare the most common words in two different texts using Python. This is a foundational technique in digital text analysis and can help you spot patterns, themes, or stylistic differences between books, chapters, or authors.\n",
     "\n",
-    "We’ll use two sample texts from Project Gutenberg: *Alice’s Adventures in Wonderland* by Lewis Carroll and *The Adventures of Sherlock Holmes* by Arthur Conan Doyle.\n",
-    "\n",
-    "## Prerequisites\n",
-    "- Basic familiarity with Python\n",
-    "- Jupyter Notebook (or  Google Colab)"
+    "We’ll use two sample texts from Project Gutenberg: *Alice’s Adventures in Wonderland* by Lewis Carroll and *The Adventures of Sherlock Holmes* by Arthur Conan Doyle."
    ]
   },
   {
@@ -21,12 +17,14 @@
    "id": "f6ddb6fa",
    "metadata": {},
    "source": [
-    "### Downloading the Texts"
+    "### Downloading the Texts\n",
+    "\n",
+    "Here, we use the requests library to download the full text of \"Alice's Adventures in Wonderland\" and \"The Adventures of Sherlock Holmes\" from Project Gutenberg. It stores the text of each book as a string in the variables alice_text and sherlock_text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "33045001",
    "metadata": {},
    "outputs": [],
@@ -48,12 +46,12 @@
    "metadata": {},
    "source": [
     "### Basic Text Cleaning and Tokenization\n",
-    "We'll lowercase the text, remove punctuation, and split into words."
+    "Here, we define a function clean_and_tokenize to preprocess the raw text. First, it normalizes curly quotes and apostrophes to standard ones, converts the text to lowercase, and then uses a regular expression (re.findall) to extract all words, including those with internal apostrophes (contractions). Finally, it removes any single-letter tokens (like 't'), except for 'i' and 'a', which are valid English words. The function is then applied to both alice_text and sherlock_text, storing the resulting lists of cleaned words in alice_words and sherlock_words."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "f34a74e4",
    "metadata": {},
    "outputs": [],
@@ -80,12 +78,14 @@
    "metadata": {},
    "source": [
     "### Removing Stopwords\n",
-    "Let's remove common words (stopwords) that don't carry much meaning."
+    "In a list, we define common English stopwords - words that are frequent but don't carry much meaning - and then create a function remove_stopwords to eliminate these words from the tokenized lists.\n",
+    "\n",
+    "The function uses a list comprehension to return a new list containing only the words that are not in the stopwords set. This is applied to both alice_words and sherlock_words, saving the results as alice_words_clean and sherlock_words_clean."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "32361336",
    "metadata": {},
    "outputs": [],
@@ -114,12 +114,12 @@
    "metadata": {},
    "source": [
     "### Counting Word Frequencies\n",
-    "We'll use Python's collections.Counter to count word frequencies."
+    "We'll use Python's collections.Counter class to efficiently count the frequency of each word in the cleaned word lists. Counter automatically creates a dictionary-like object where keys are the unique words and values are their counts. The word counts for each text are stored in alice_counts and sherlock_counts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "44ee8442",
    "metadata": {},
    "outputs": [],
@@ -136,12 +136,12 @@
    "metadata": {},
    "source": [
     "### Displaying the Most Common Words\n",
-    "Let's see the top 10 words in each text."
+    "Let's see the top 10 words in each text. We can use the most_common() method of the Counter object to get a list of the 10 most frequent words and their counts, and then print these lists out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "acff6a3f",
    "metadata": {},
    "outputs": [
@@ -171,12 +171,12 @@
    "metadata": {},
    "source": [
     "### Comparing the Top Words\n",
-    "Which words are common to both texts? Which are unique?"
+    "Which words are common to both texts? Which are unique? Feel free to compare texts of your choosing, and see what the results bring to light."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "88bb1f41",
    "metadata": {},
    "outputs": [
@@ -184,9 +184,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Words common to both texts: {'down', 'well', 'see', 'little'}\n",
-      "Words unique to Alice: {'queen', 'king', 'alice', 'thought', 'time', 'off'}\n",
-      "Words unique to Sherlock: {'man', 'should', 'over', 'may', 'mr', 'holmes'}\n"
+      "Words common to both texts: {'well', 'see', 'little', 'down'}\n",
+      "Words unique to Alice: {'alice', 'off', 'time', 'king', 'queen', 'thought'}\n",
+      "Words unique to Sherlock: {'man', 'mr', 'over', 'holmes', 'should', 'may'}\n"
      ]
     }
    ],
